// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik jCoLHv sc-dkAqVg elcfge sc-jifHHV juzEvz"
    >
      <h3
        class="sc-gWHigU hGGoTM sc-cBNeex gsjqDj"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik jCoLHv sc-dkAqVg dbZNWR sc-jifHHV juzEvz"
    >
      <h3
        class="sc-gWHigU hGGoTM sc-cBNeex gsjqDj"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
